--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "09-Node.js-README-generator",
+  "name": "static-site",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RLacer/09-Node.js-README-generator.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RLacer/09-Node.js-README-generator/issues"
-  },
-  "homepage": "https://github.com/RLacer/09-Node.js-README-generator#readme",
   "dependencies": {
-    "inquirer": "^8.0.0"
+    "inquirer": "^6.3.1"
   }
 }
